syntax = "proto3";

option java_package = "io.github.ahappypie.LightDelay.grpc";
option java_outer_classname = "LightDelayProto";

service LightDelay {
    rpc GetLightDelay (LightDelayRequest) returns (LightDelayResponse) {}
}

message LightDelayRequest {
    uint64 timestamp = 1;
    enum Body {
        UNKNOWN_PLANET = 0;
        MERCURY = 1;
        VENUS = 2;
        EARTH = 3;
        MARS = 4;
        JUPITER = 5;
        SATURN = 6;
        URANUS = 7;
        NEPTUNE = 8;
    }
    Body origin = 2;
    Body dest = 3;
}

message LightDelayResponse {
    uint32 delay = 1;
}